--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -2,6 +2,7 @@
 %html
   %head
     %meta{'http-equiv' => 'content-type', :content => 'text/html;charset=UTF-8'}
+    = csrf_meta_tag
     = stylesheet_link_tag('reset')
     = stylesheet_link_tag('default')
     = stylesheet_link_tag('omnisocial')
